--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,12 +39,13 @@ body {
 	line-height: 1;
 }
 
-ol, ul {
+/* ol, ul {
 	list-style: none;
-}
+} */
 
 blockquote, q {
-	quotes: none;
+	/* quotes: none; */
+	text-align: left;
 }
 
 	blockquote:before, blockquote:after, q:before, q:after {
@@ -97,7 +98,7 @@ input::-moz-focus-inner {
 		color: #888;
 	}
 
-		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
+	body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
 			-webkit-animation: none !important;
 			-ms-animation: none !important;
@@ -106,7 +107,7 @@ input::-moz-focus-inner {
 			-webkit-transition: none !important;
 			-ms-transition: none !important;
 			transition: none !important;
-		}
+	}
 
 	input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
@@ -1809,7 +1810,7 @@ input::-moz-focus-inner {
 		}
 
 	ol {
-		list-style: decimal;
+		/* list-style: decimal; */
 		padding-left: 1.25em;
 	}
 
@@ -1957,10 +1958,10 @@ input::-moz-focus-inner {
 		background-color: #8ebebc;
 		border: 0;
 		cursor: pointer;
-		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
-		background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
-		background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
-		background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
+		background-image: -moz-linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
+		background-image: -webkit-linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
+		background-image: -ms-linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
+		background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
 		-moz-transition: background-color 0.35s ease-in-out;
 		-webkit-transition: background-color 0.35s ease-in-out;
 		-ms-transition: background-color 0.35s ease-in-out;
@@ -2656,3 +2657,119 @@ input::-moz-focus-inner {
 				}
 
 	}
+	
+	/* accordion */
+
+	.accordion {
+  background-color: rgb(151, 185, 184);
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 90%;
+}
+
+	.active, .accordion:hover {
+	background-color: #ccc;
+  }
+  
+  .panel {
+	padding: 0 18px;
+	background-color: inherit;
+	display: none;
+	overflow: hidden;
+  }
+
+  /* drag&drop quiz */
+  /* adapted from https://codepen.io/jailce/pen/ExxxBJP */
+
+  .quiz-wrapper {
+  position: relative;
+  display: block;
+  width: 80%;
+  height: 80%;
+  margin-bottom: 25px;
+}
+.quiz-wrapper p.question-description {
+  background: #0f531d;
+  color: white;
+  padding: 25px 20px;
+}
+
+.quiz-wrapper ul.options {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 25%;
+  list-style: none;
+  border: 1px solid #0f531d;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+.quiz-wrapper ul.options li {
+  border: 1px solid transparent;
+  padding: 6px 8px;
+}
+.quiz-wrapper ul.options li.title {
+  background: #0f531d;
+  color: white;
+}
+.quiz-wrapper ul.options li.option {
+  display: block;
+  position: relative;
+  z-index: 50;
+  font-size: 16px;
+}
+.quiz-wrapper .answers {
+  display: inline-block;
+  width: 70%;
+  font-size: 18px;
+  line-height:30px;
+  text-align: left;
+}
+.quiz-wrapper .answers .target {
+  display: inline-block;
+  width: 25%;
+  background: lightblue;
+  margin: 0 3px;
+  text-align: center;
+}
+.quiz-wrapper button[type="submit"] {
+  display: block;
+  position: relative;
+  margin: 10px auto;
+  padding: 10px;
+  background: #0f531d;
+  border: none;
+  color: white;
+  font-size: 16px;
+}
+.lightbox-bg {
+  display: none;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+}
+.status {
+  display: none;
+  position: absolute;
+  z-index: 110;
+  text-align: center;
+  width: 80%;
+  top: 220px;
+  left: 47px;
+}
+.status p {
+  background: white;
+  padding: 30px;
+}
